@@ -3,6 +3,7 @@ Stability update for v0.9.6
 
 * Fixed French translation
 * Fixed bug in registration from compositing for layers alignment
+* Improved global registration. New algorithm with homography
 
 v0.9.6, Jun 20, 2017
 Stability update for v0.9.5
