@@ -3,6 +3,8 @@ siril 0.9.7
 
 * Fixed French translation
 * Fixed bug in registration from compositing for layers alignment
+* Improved global registration. New algorithm with homography
+
 
 siril 0.9.6
 06/20/17
